force-app/main/default/objects/Account/fields/General_Ledger__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger__c</fullName>
    <description>This field is used to indicate which products and services a Prospect-Dlient uses.</description>
    <label>General Ledger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GL Interface</fullName>
            </value>
            <value>
                <fullName>GL Report</fullName>
            </value>
            <value>
                <fullName>General Ledger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>