force-app/main/default/objects/Account/fields/H_B_Brokerage_Firm__c.field-meta.xml
<CustomField>
    <fullName>H_B_Brokerage_Firm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>H&amp;B Brokerage Firm</label>
    <length>50</length>
    <type>Text</type>
</CustomField>