force-app/main/default/objects/Account/fields/H_B_Carrier__c.field-meta.xml
<CustomField>
    <fullName>H_B_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>H&amp;B Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>