force-app/main/default/objects/Account/fields/H_B_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>H_B_Renewal_Date__c</fullName>
    <description>Date changed from xx/xx/xxxx format to Month picklist.</description>
    <label>H&amp;B Renewal Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
            <value>
                <fullName>No Prior Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>