force-app/main/default/objects/Account/fields/HasHoldOutDate__c.field-meta.xml
<CustomField>
    <fullName>HasHoldOutDate__c</fullName>
    <formula>OR( AND(Hold_Out__c, NOT(ISNULL(Hold_Out_Expiration__c)))
   ,AND(HNBF_Hold_Out__c, NOT(ISNULL( HNBF_Hold_Out_Expiration__c)))
   ,AND(HRS_Hold_Out__c, NOT(ISNULL(  HRS_Hold_Out_Expiration__c)))
   ,AND(MS_Hold_Out__c, NOT(ISNULL(  MS_Hold_Out_Expiration__c)))
   ,AND(Premier_PBS_Hold_Out__c, NOT(ISNULL( Premier_PBS_Hold_Out_Expiration__c )))
   )</formula>
    <inlineHelpText>Are any of the hold out fields set to true with an expiration date?</inlineHelpText>
    <label>Has Hold Out With Date</label>
    <type>Checkbox</type>
</CustomField>