force-app/main/default/objects/Account/fields/Hispanic_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_Ownership__c</fullName>
    <description>this boolean value is used to help determine the Payroll segmentation and ownership, case 18753934</description>
    <formula>OR (ISPICKVAL( Ethnicity__c,&apos;HA1&apos;)
   ,ISPICKVAL( Ethnicity__c,&apos;HA2&apos;)
   ,ISPICKVAL( Ethnicity__c,&apos;HA3&apos;)
   ,ISPICKVAL( Ethnicity__c,&apos;HA4&apos;)
   ,ISPICKVAL( Ethnicity__c,&apos;HA5&apos;))</formula>
    <inlineHelpText>used to determine Payroll segmentation</inlineHelpText>
    <label>Hispanic Ownership</label>
    <type>Checkbox</type>
</CustomField>