force-app/main/default/objects/Account/fields/HNBF_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>HNBF_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Health and Benefits Field Sales Account Owner - Used to identify the owner of an account</description>
    <label>HNBF Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HNBF_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>