force-app/main/default/objects/Account/fields/HNBF_Hold_Out__c.field-meta.xml
<CustomField>
    <fullName>HNBF_Hold_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HNBF Hold Out</label>
    <type>Checkbox</type>
</CustomField>