force-app/main/default/objects/Account/fields/HNBF_Hold_Out_Expiration__c.field-meta.xml
<CustomField>
    <fullName>HNBF_Hold_Out_Expiration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HNBF Hold Out Expiration</label>
    <type>Date</type>
</CustomField>