force-app/main/default/objects/Account/fields/HNBF_Permanent_Hold_Out_Description__c.field-meta.xml
<CustomField>
    <fullName>HNBF_Permanent_Hold_Out_Description__c</fullName>
    <inlineHelpText>This field will be populated when there is a Hold Out for the HNBF Hold Out Reason Owner for BOTH perm and temp hold outs. If the HNBF Hold Out Expiration Date is populated, the Hold Out is temporary. If the Date Field is blank, the Hold Out is permanent.</inlineHelpText>
    <label>HNBF Hold Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>672249</fullName>
            </value>
            <value>
                <fullName>Bank Centric Team</fullName>
            </value>
            <value>
                <fullName>CPA Centric Team</fullName>
            </value>
            <value>
                <fullName>DNC Protected</fullName>
            </value>
            <value>
                <fullName>Field Account Managed</fullName>
            </value>
            <value>
                <fullName>Financial Advisor Team</fullName>
            </value>
            <value>
                <fullName>IA Centric Team</fullName>
            </value>
            <value>
                <fullName>International Zip</fullName>
            </value>
            <value>
                <fullName>Market Segmentation Policy</fullName>
            </value>
            <value>
                <fullName>Multi-ID Child Record</fullName>
            </value>
            <value>
                <fullName>National Account Team</fullName>
            </value>
            <value>
                <fullName>PO Box Exception</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Project Blue Phase 0</fullName>
            </value>
            <value>
                <fullName>Shared Zip</fullName>
            </value>
            <value>
                <fullName>Strategic Account Team</fullName>
            </value>
            <value>
                <fullName>SurePayroll ERTC</fullName>
            </value>
            <value>
                <fullName>SurePayroll HR Sale</fullName>
            </value>
            <value>
                <fullName>Territory Exception</fullName>
            </value>
            <value>
                <fullName>VS Account Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>