force-app/main/default/objects/Account/fields/Hold_Out__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To signify Hold Out accounts that should not be transferred during territory changes</description>
    <label>Hold Out</label>
    <type>Checkbox</type>
</CustomField>