force-app/main/default/objects/Account/fields/Hold_Out_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out_Expiration__c</fullName>
    <description>Date when Account-Contact should be returned to territory rep ownership.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hold Out Expiration</label>
    <type>Date</type>
</CustomField>