force-app/main/default/objects/Account/fields/HoursSinceLastCall__c.field-meta.xml
<CustomField>
    <fullName>HoursSinceLastCall__c</fullName>
    <formula>(NOW() - LatestCallTime__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The hours since the last call in the ISDC dialer</inlineHelpText>
    <label>Hours Since Last Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>