force-app/main/default/objects/Account/fields/HR_Generalist__c.field-meta.xml
<CustomField>
    <fullName>HR_Generalist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Generalist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (HR Generalist)</relationshipLabel>
    <relationshipName>R00N70000002FnrDEAS</relationshipName>
    <type>Lookup</type>
</CustomField>