force-app/main/default/objects/Account/fields/HR_Manager__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (HR Manager)</relationshipLabel>
    <relationshipName>R00N70000002FnrEEAS</relationshipName>
    <type>Lookup</type>
</CustomField>