force-app/main/default/objects/Account/fields/HR_Online__c.field-meta.xml
<CustomField>
    <fullName>HR_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HR Online Product field</description>
    <label>HR Online</label>
    <type>Checkbox</type>
</CustomField>