force-app/main/default/objects/Account/fields/HRIS_Current_Prior_Method__c.field-meta.xml
<CustomField>
    <fullName>HRIS_Current_Prior_Method__c</fullName>
    <label>HRIS Current-Prior Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABRA</fullName>
            </value>
            <value>
                <fullName>ADP Enterprise HR (Perspective)</fullName>
            </value>
            <value>
                <fullName>ADP HR/Benefits</fullName>
            </value>
            <value>
                <fullName>ADP HR/Profile®</fullName>
            </value>
            <value>
                <fullName>ADP HR eXpert</fullName>
            </value>
            <value>
                <fullName>Excel Based</fullName>
            </value>
            <value>
                <fullName>Local Competitor</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Netchex</fullName>
            </value>
            <value>
                <fullName>Oracle HRIS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
            <value>
                <fullName>Peoplesoft</fullName>
            </value>
            <value>
                <fullName>Ultimate Software</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>