force-app/main/default/objects/Account/fields/HRO_Account_Health__c.field-meta.xml
<CustomField>
    <fullName>HRO_Account_Health__c</fullName>
    <label>GL Account Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Potential Risk</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>