force-app/main/default/objects/Account/fields/HRO_Group__c.field-meta.xml
<CustomField>
    <fullName>HRO_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is marked if there are other Prospects-Clients that share the same HRO Number.</inlineHelpText>
    <label>HRO Group?</label>
    <type>Checkbox</type>
</CustomField>