force-app/main/default/objects/Account/fields/HRO_Implementation_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>HRO_Implementation_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HRO Implementation Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospects_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>