force-app/main/default/objects/Account/fields/HRO_Preview_On_a_Network__c.field-meta.xml
<CustomField>
    <fullName>HRO_Preview_On_a_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field&apos;s Field Label was changed from &quot;HRO Preview On a Network?&quot; to &quot;HRO Client Survey Indicator&quot; on 11/09/09.</description>
    <inlineHelpText>Check box if HRO client should be surveyed.</inlineHelpText>
    <label>HRO Client Survey Indicator*-</label>
    <type>Checkbox</type>
</CustomField>