force-app/main/default/objects/Account/fields/HRO_Test__c.field-meta.xml
<CustomField>
    <fullName>HRO_Test__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>HRO Test*-</label>
    <length>32</length>
    <type>Text</type>
</CustomField>