force-app/main/default/objects/Account/fields/HRS_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>HRS_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HRS Account Owner - Used to identify the owner of an account from HRS</description>
    <label>401k Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>R00N50000001WeqVEAS</relationshipName>
    <type>Lookup</type>
</CustomField>