force-app/main/default/objects/Account/fields/HRS_Hold_Out__c.field-meta.xml
<CustomField>
    <fullName>HRS_Hold_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To signify Hold Out accounts that should not be transferred during HRS territory changes</description>
    <label>401k Hold Out</label>
    <type>Checkbox</type>
</CustomField>