force-app/main/default/objects/Account/fields/HRS_Hold_Out_Expiration__c.field-meta.xml
<CustomField>
    <fullName>HRS_Hold_Out_Expiration__c</fullName>
    <description>Date when Account-Contact should be returned to territory HRS rep ownership.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>401k Hold Out Expiration</label>
    <type>Date</type>
</CustomField>