force-app/main/default/objects/Account/fields/Infogroup_ABI__c.field-meta.xml
<CustomField>
    <fullName>Infogroup_ABI__c</fullName>
    <description>Infogroup unique business ID number, used for matching our records with the Infogroup database for cleansing and unique identification.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Infogroup ABI #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>