force-app/main/default/objects/Account/fields/Insurance_Broker_Name_Ref__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Broker_Name_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client Insurance Broker relationship - field created per Fast Track Case #21916459</description>
    <label>Insurance Broker Full Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referral_Contact__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>Search results exclude records with an end date.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Referral_Contact__c</referenceTo>
    <relationshipLabel>Insurance Broker-Mutual Clients</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>