force-app/main/default/objects/Account/fields/Internal_Wholesaler_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Wholesaler_Account_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wholesaler Account Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>