force-app/main/default/objects/Account/fields/isChild__c.field-meta.xml
<CustomField>
    <fullName>isChild__c</fullName>
    <description>indicates if this is a Child Account</description>
    <formula>If (IsBlank(SalesParent__c),False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isChild</label>
    <type>Checkbox</type>
</CustomField>