force-app/main/default/objects/Account/fields/isParent__c.field-meta.xml
<CustomField>
    <fullName>isParent__c</fullName>
    <description>if has Children then must be a parent</description>
    <formula>IF( Child_Count__c &gt;0,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isParent</label>
    <type>Checkbox</type>
</CustomField>