force-app/main/default/objects/Account/fields/Job_Costing__c.field-meta.xml
<CustomField>
    <fullName>Job_Costing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies an Assets(Products/Services) added to this Prospect-Client. This box will be checked with code based on the Assets added.</description>
    <label>Job Costing</label>
    <type>Checkbox</type>
</CustomField>