force-app/main/default/objects/Account/fields/KP_Client__c.field-meta.xml
<CustomField>
    <fullName>KP_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Those clients that are key partners</description>
    <label>KP Client</label>
    <type>Checkbox</type>
</CustomField>