force-app/main/default/objects/Account/fields/Labor_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Labor_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate which products and services a Prospect-Client uses.</description>
    <label>Labor Distribution</label>
    <type>Checkbox</type>
</CustomField>