force-app/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>For case 17797057. Field is being populated upon import from Salesgenie. Will be populated from GeoScape at a future TBD date. This field is being hijacked for case 18753934 to determine Hispanic Ownership. It will be manually maintained by sales.</description>
    <inlineHelpText>Preferred language of prospect-client</inlineHelpText>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>English and Spanish</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Spanish Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>