force-app/main/default/objects/Account/fields/Larkspur_401K_Assets__c.field-meta.xml
<CustomField>
    <fullName>Larkspur_401K_Assets__c</fullName>
    <description>Total Assets value form the most recent 5500 record</description>
    <inlineHelpText>Total Assets value form the most recent 5500 record</inlineHelpText>
    <label>5500 401K Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>