force-app/main/default/objects/Account/fields/LastPayrollOppCreated__c.field-meta.xml
<CustomField>
    <fullName>LastPayrollOppCreated__c</fullName>
    <inlineHelpText>The date the latest payroll opportunity was created</inlineHelpText>
    <label>Last Payroll Opp Created</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.OpportunityType__c</field>
        <operation>equals</operation>
        <value>Add-On ID, Ancillary, Payroll, Upsell</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>