force-app/main/default/objects/Account/fields/LatestCampaignName__c.field-meta.xml
<CustomField>
    <fullName>LatestCampaignName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the latest campaign on the significant contact</inlineHelpText>
    <label>Latest Campaign Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>