force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Chat</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Email</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Event</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Organic Search</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Paid Search</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Social Media</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Traditional Media</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Web</fullName>
            </value>
            <value>
                <fullName>Current Client-New Ownership</fullName>
            </value>
            <value>
                <fullName>Jigsaw</fullName>
            </value>
            <value>
                <fullName>Local Advertising</fullName>
            </value>
            <value>
                <fullName>Local Direct Mail</fullName>
            </value>
            <value>
                <fullName>Local Drop</fullName>
            </value>
            <value>
                <fullName>Local Email</fullName>
            </value>
            <value>
                <fullName>Local Networking</fullName>
            </value>
            <value>
                <fullName>Local Rep Telemarketing</fullName>
            </value>
            <value>
                <fullName>Local Seminar</fullName>
            </value>
            <value>
                <fullName>Local Tradeshow</fullName>
            </value>
            <value>
                <fullName>Lost Client</fullName>
            </value>
            <value>
                <fullName>National Account HQ</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
            <value>
                <fullName>National Advertising</fullName>
            </value>
            <value>
                <fullName>National Advertising -Search Engine Mktg</fullName>
            </value>
            <value>
                <fullName>National Advertising -Social Media</fullName>
            </value>
            <value>
                <fullName>National Sales Support</fullName>
            </value>
            <value>
                <fullName>National Seminar</fullName>
            </value>
            <value>
                <fullName>Outside Source</fullName>
            </value>
            <value>
                <fullName>Phone Book</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>