force-app/main/default/objects/Account/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Referral Account Sync Field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>