force-app/main/default/objects/Account/fields/Local_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Local_Competitors__c</fullName>
    <description>Used for local competitors not contained in national pick list</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Local Competitors</label>
    <length>100</length>
    <type>Text</type>
</CustomField>