force-app/main/default/objects/Account/fields/Local_Payroll_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Local_Payroll_Vendor__c</fullName>
    <description>Local Competition</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of Local Payroll Vendor that prospect currently uses or client used to utilize.</inlineHelpText>
    <label>Local Payroll Vendor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>