force-app/main/default/objects/Account/fields/Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Lost_Date__c</fullName>
    <description>Fed in from HRIS and Payroll nightly.
Field fed into Oracle Analytics (OBIEE) system nightly.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lost Date</label>
    <type>Date</type>
</CustomField>