force-app/main/default/objects/Account/fields/LostClient__c.field-meta.xml
<CustomField>
    <fullName>LostClient__c</fullName>
    <formula>AND((Bis_ID__c &gt; 0),OR(NOT(ISBLANK(Lost_Date__c )),( TEXT(Type) = &quot;Lost Client&quot;),( TEXT(Type) = &quot;HRS Client (Only)&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this a Lost Client?</inlineHelpText>
    <label>Lost Client?</label>
    <type>Checkbox</type>
</CustomField>