force-app/main/default/objects/Account/fields/Main_Owner_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Main_Owner_Changed_Date__c</fullName>
    <description>Automatically updated (via workflow) when the main owner changes on the account. Used to send data to FFS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Main Owner Changed Date</label>
    <type>DateTime</type>
</CustomField>