force-app/main/default/objects/Account/fields/Medical__c.field-meta.xml
<CustomField>
    <fullName>Medical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case : 24474194  - &apos;Used for the Custom Setting AssetMapping in the E-Client effort&apos;.</description>
    <label>PAYX H&amp;B</label>
    <type>Checkbox</type>
</CustomField>