force-app/main/default/objects/Account/fields/Medical_Deduction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Deduction_Start_Date__c</fullName>
    <description>case #27402087 To record the date in which a payroll client begins a medical deduction. For H&amp;B Sales prospecting (virtual and field).  Risk will identify the date and work with Sales to update the field weekly.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Deduction Start Date</label>
    <type>Date</type>
</CustomField>