force-app/main/default/objects/Account/fields/Merge_Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Merge_Requestor_Email__c</fullName>
    <description>Auto populated via workflow for Merges</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Merge Requestor Email</label>
    <type>Email</type>
</CustomField>