force-app/main/default/objects/Account/fields/miedge_crm__Master_MSID__c.field-meta.xml
<CustomField>
    <fullName>miedge_crm__Master_MSID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the MSID object that miEdge has found to be a match with this Account</description>
    <label>Master MSID</label>
    <referenceTo>miedge_crm__Master_MSID__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>