force-app/main/default/objects/Account/fields/miedge_crm__Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>miedge_crm__Sync_Date__c</fullName>
    <description>Stores the last time we attempted to update data to this MSID record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sync Date</label>
    <type>DateTime</type>
</CustomField>