force-app/main/default/objects/Account/fields/MMS__c.field-meta.xml
<CustomField>
    <fullName>MMS__c</fullName>
    <formula>IMAGE( 
CASE( MMS_Account_Health__c, 
&quot;Stable&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Potential Risk&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;At Risk&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preview</label>
    <type>Text</type>
</CustomField>