force-app/main/default/objects/Account/fields/MMS_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>MMS_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MMS Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>