force-app/main/default/objects/Account/fields/MMS_AS__c.field-meta.xml
<CustomField>
    <fullName>MMS_AS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Changed field label on 11/19/2014 per request in case #16019992</description>
    <label>Payroll Implementation Specialist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Payroll Implementation Specialist)</relationshipLabel>
    <relationshipName>R00N70000002Fnr3EAC</relationshipName>
    <type>Lookup</type>
</CustomField>