force-app/main/default/objects/Account/fields/MMS_CSR_Name__c.field-meta.xml
<CustomField>
    <fullName>MMS_CSR_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MMS CSR Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>