force-app/main/default/objects/Account/fields/MMS_MAM_NAM__c.field-meta.xml
<CustomField>
    <fullName>MMS_MAM_NAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (MMS MAM/NAM)</relationshipLabel>
    <relationshipName>R00N70000002FnfpEAC</relationshipName>
    <type>Lookup</type>
</CustomField>