force-app/main/default/objects/Account/fields/MMS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MMS_Start_Date__c</fullName>
    <description>First Run date for MMS Clients
The HRIS nightly feed will take the first payroll run date and the branch # into account. If the branch # is in the 400s (MMS), it will copy the First Run Date into this field. Note: This is only from Preview, not from Flex. It uses the branch # to determine whether to use the Core date or MMS date. Branch # in the 400s = MMS.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MMS Start Date</label>
    <type>Date</type>
</CustomField>