force-app/main/default/objects/Account/fields/MS_Hold_Out__c.field-meta.xml
<CustomField>
    <fullName>MS_Hold_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MS Hold Out</label>
    <type>Checkbox</type>
</CustomField>