force-app/main/default/objects/Account/fields/MS_Hold_Out_Expiration__c.field-meta.xml
<CustomField>
    <fullName>MS_Hold_Out_Expiration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MS Hold Out Expiration</label>
    <type>Date</type>
</CustomField>