force-app/main/default/objects/Account/fields/Multi_Product_Client_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Multi_Product_Client_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BU: Multi-Product 
Manual or Fed Field: Manual 
Case#: 16513991</description>
    <label>Multi-Product Client Indicator</label>
    <type>Checkbox</type>
</CustomField>