force-app/main/default/objects/Account/fields/MyPaychex_com_Client__c.field-meta.xml
<CustomField>
    <fullName>MyPaychex_com_Client__c</fullName>
    <description>Used to indicate if the client is a my paychex.com client.  Manually updated by Susan Milner and Tony Mymern</description>
    <label>MyPaychex.com Client*-</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SSO Legacy</fullName>
            </value>
            <value>
                <fullName>SSO Legacy Admin</fullName>
            </value>
            <value>
                <fullName>One Source Solutions Portal</fullName>
            </value>
            <value>
                <fullName>One Source Solutions Portal Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>