force-app/main/default/objects/Account/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <description>Mapped from NAICS Code field on the Lead object, fed from Salesgenie. Created part of BAU case 16410673.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NAICS Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>