force-app/main/default/objects/Account/fields/NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Description__c</fullName>
    <description>Mapped from the NAICS Description on the Lead object, fed from Salesgenie. Created as part of case 16410673</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NAICS Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>